<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvFECHAFinalDOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="@font/aclonica"
        android:hint="@string/FechaNacimientoTitulo"
        android:text="@string/FechaNacimientoTitulo"
        android:textColor="@color/VerdeFormulario"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNOMBREDOS" />

    <TextView
        android:id="@+id/tvNOMBREDOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:hint="@string/NombreTitulo"
        android:text="@string/NombreTitulo"
        android:textColor="@color/VerdeFormulario"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/tvCuentaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="149dp"
        android:fontFamily="@font/aclonica"
        android:hint="@string/NumeroCuentaTitulo"
        android:text="@string/NumeroCuentaTitulo"
        android:textColor="@color/VerdeFormulario"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFECHAFinalDOS" />

    <TextView
        android:id="@+id/tvCT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="@font/aclonica"
        android:hint="@string/CorreoTitulo"
        android:text="@string/CorreoTitulo"
        android:textColor="@color/VerdeFormulario"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCuentaTitulo" />

    <EditText
        android:id="@+id/EdtCUENTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:hint="@string/NumeroCuenta"
        android:inputType="number"
        android:maxLength="9"
        android:minHeight="48dp"
        android:textColor="@color/NegroInformacion"
        android:textColorHint="@color/NegroInformacion"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCuentaTitulo"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/EdtEMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:minHeight="48dp"
        android:textColor="@color/NegroInformacion"
        android:textColorHint="@color/NegroInformacion"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSIG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCT"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/EdtNOMBRE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:minHeight="48dp"
        android:textColor="@color/NegroInformacion"
        android:textColorHint="@color/NegroInformacion"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNOMBREDOS"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvTITULOO1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="51dp"
        android:fontFamily="@font/aclonica"
        android:hint="@string/Titulo1"
        android:text="@string/Titulo1"
        android:textColor="@color/Azultitulo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNOMBREDOS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTITULO2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:hint="@string/Titulo2"
        android:text="@string/Titulo2"
        android:textColor="@color/Azultitulo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNOMBREDOS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTITULOO1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSIG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:onClick="click"
        android:text="@string/Siguiente"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtNEWFECHA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="124dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:hint="@string/FechaNacimiento"
        android:inputType="textPersonName"
        android:textColor="@color/NegroInformacion"
        android:textColorHint="@color/NegroInformacion"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvCuentaTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFECHAFinalDOS"
        app:layout_constraintVertical_bias="0.235"
        tools:ignore="Autofill" />


</androidx.constraintlayout.widget.ConstraintLayout>